--- a/about.html
+++ b/about.html
@@ -442,7 +442,7 @@
 											<span class="h3 mb-0 text-primary fw-bold">1</span>
 										</div>
 										<h4 class="h5 mb-3">Submit & Screen</h4>
-										<p class="mb-0">Submit your manuscript. Editorial screening within <strong>3-5 days</strong> for scope and format.</p>
+										<p class="mb-0">Submit your manuscript. Editorial screening within <strong>3-5 business days</strong> for scope and format.</p>
 									</div>
 								</div>
 								<div class="col-md-4">
