--- a/apc.html
+++ b/apc.html
@@ -375,7 +375,7 @@
 										<ol class="mb-0">
 											<li>Indicate waiver request during manuscript submission</li>
 											<li>Provide brief justification and supporting information</li>
-											<li>Await confirmation from editorial office (within 5 working days)</li>
+											<li>Await confirmation from editorial office (within 5 business days)</li>
 											<li>If approved, proceed with publication at reduced or zero APC</li>
 										</ol>
 										<p class="mt-2 mb-0"><strong>Note:</strong> Waiver decisions are based solely on financial need and do not affect editorial evaluation.</p>
@@ -397,7 +397,7 @@
 													<li>Manuscript submitted and undergoes peer review</li>
 													<li>Upon acceptance, APC invoice generated</li>
 													<li>Corresponding author receives payment link via PayPal</li>
-													<li>Payment completed within 14 days of acceptance</li>
+													<li>Payment completed within 14 business days of acceptance</li>
 													<li>Upon payment confirmation, article moves to production</li>
 													<li>Final version published online</li>
 												</ol>
@@ -409,7 +409,7 @@
 												<ul class="mb-0">
 													<li><strong>No refunds</strong> after payment processing begins</li>
 													<li>Articles remain unpublished until APC is settled</li>
-													<li>Extensions available upon request (max 30 days)</li>
+													<li>Extensions available upon request (max 30 business days)</li>
 													<li>Institutional payments may require purchase order</li>
 													<li>Currency: USD only (PayPal handles conversion)</li>
 												</ul>
@@ -450,7 +450,7 @@
 									</h2>
 									<div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
 										<div class="accordion-body">
-											Currently, PayPal is our only payment gateway. For institutional payments requiring bank transfer or invoice, please contact <a href="mailto:apc@solav.me">apc@solav.me</a> at least 10 days before payment deadline to arrange alternative payment methods.
+											Currently, PayPal is our only payment gateway. For institutional payments requiring bank transfer or invoice, please contact <a href="mailto:apc@solav.me">apc@solav.me</a> at least 10 business days before payment deadline to arrange alternative payment methods.
 										</div>
 									</div>
 								</div>
@@ -489,7 +489,7 @@
 									</h2>
 									<div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
 										<div class="accordion-body">
-											Accepted manuscripts remain unpublished until APC settlement. After 30 days without payment or communication, the acceptance may be withdrawn. Contact us if you need a payment extension.
+											Accepted manuscripts remain unpublished until APC settlement. After 30 business days without payment or communication, the acceptance may be withdrawn. Contact us if you need a payment extension.
 										</div>
 									</div>
 								</div>
