--- a/appeals-complaints.html
+++ b/appeals-complaints.html
@@ -259,7 +259,7 @@
 												<ul class="mb-0">
 													<li>Right to appeal rejection, major revision, or retraction decisions</li>
 													<li>Must be based on factual errors or process flaws</li>
-													<li>Submit within 30 days of decision</li>
+													<li>Submit within 30 business days of decision</li>
 													<li>Independent review by senior editors</li>
 												</ul>
 											</div>
@@ -289,7 +289,7 @@
 													<i class="bi bi-shield-check me-2"></i>Fair Process
 												</h5>
 												<ul class="mb-0">
-													<li>Initial response within 7 working days</li>
+													<li>Initial response within 7 business days</li>
 													<li>Independent investigation when needed</li>
 													<li>Opportunity for all parties to respond</li>
 													<li>Clear communication of outcomes</li>
@@ -305,8 +305,8 @@
 													<i class="bi bi-clock-history me-2"></i>Timely Resolution
 												</h5>
 												<ul class="mb-0">
-													<li>Standard cases: 30 days resolution</li>
-													<li>Complex investigations: 60 days resolution</li>
+													<li>Standard cases: 30 business days resolution</li>
+													<li>Complex investigations: 60 business days resolution</li>
 													<li>Regular updates provided</li>
 													<li>Final decisions are binding</li>
 												</ul>
@@ -396,7 +396,7 @@
 												<li>Responses to reviewers' comments, if applicable</li>
 												<li>Confirmation that all co-authors support the appeal</li>
 											</ol>
-											<p><strong>Deadline:</strong> Appeals should be submitted within 30 days of the editorial decision notification.</p>
+											<p><strong>Deadline:</strong> Appeals should be submitted within 30 business days of the editorial decision notification.</p>
 											
 											<h5 class="mt-4 mb-3">Appeal Review Process</h5>
 											<ol>
@@ -453,7 +453,7 @@
 											<h5 class="mt-4 mb-3">Complaint Handling Procedure</h5>
 											<p>All complaints are handled confidentially and impartially. The Journal follows these steps:</p>
 											<ol>
-												<li><strong>Acknowledgment:</strong> Receipt acknowledged within 7 working days</li>
+												<li><strong>Acknowledgment:</strong> Receipt acknowledged within 7 business days</li>
 												<li><strong>Assessment:</strong> Preliminary assessment by the Editorial Office</li>
 												<li><strong>Investigation:</strong> Formal investigation when necessary</li>
 												<li><strong>Consultation:</strong> With independent experts, if appropriate</li>
@@ -526,8 +526,8 @@
 											<h5 class="mb-3">Resolution Timeframes</h5>
 											<p>SOLAV Journal aims to resolve appeals and complaints within:</p>
 											<ul>
-												<li><strong>Standard cases:</strong> 30 days from receipt of complete information</li>
-												<li><strong>Complex investigations:</strong> 60 days from receipt of complete information</li>
+												<li><strong>Standard cases:</strong> 30 business days from receipt of complete information</li>
+												<li><strong>Complex investigations:</strong> 60 business days from receipt of complete information</li>
 												<li><strong>Exceptional cases:</strong> May require additional time with regular updates</li>
 											</ul>
 											<p>Delays will be communicated to the concerned parties with revised timelines.</p>
