--- a/corrections-retractions.html
+++ b/corrections-retractions.html
@@ -442,7 +442,7 @@
 											<ol>
 												<li><strong>Initial Assessment:</strong> Editorial Office evaluates the concern</li>
 												<li><strong>Consultation:</strong> Editor-in-Chief and Ethics Committee review</li>
-												<li><strong>Author Notification:</strong> Authors informed and given opportunity to respond (typically 14 days)</li>
+												<li><strong>Author Notification:</strong> Authors informed and given opportunity to respond (typically 14 business days)</li>
 												<li><strong>Evidence Gathering:</strong> Collection of relevant documentation and evidence</li>
 												<li><strong>Expert Review:</strong> Independent expert consultation when necessary</li>
 												<li><strong>Decision Making:</strong> Final decision by Editor-in-Chief based on evidence</li>
@@ -452,10 +452,10 @@
 											
 											<h6 class="mt-3 mb-2">Timeline:</h6>
 											<ul>
-												<li>Initial response: Within 7 working days</li>
-												<li>Preliminary assessment: 14-30 days</li>
-												<li>Complex investigations: 60-90 days</li>
-												<li>Notice publication: Within 14 days of final decision</li>
+												<li>Initial response: Within 7 business days</li>
+												<li>Preliminary assessment: 14-30 business days</li>
+												<li>Complex investigations: 60-90 business days</li>
+												<li>Notice publication: Within 14 business days of final decision</li>
 											</ul>
 										</div>
 									</div>
@@ -475,7 +475,7 @@
 											
 											<h6 class="mb-2">Appeal Requirements:</h6>
 											<ul class="mb-3">
-												<li>Submitted within 30 days of decision notification</li>
+												<li>Submitted within 30 business days of decision notification</li>
 												<li>Written in English or Arabic</li>
 												<li>Includes manuscript ID and detailed rationale</li>
 												<li>Provides supporting evidence or documentation</li>
