--- a/editorial.html
+++ b/editorial.html
@@ -500,7 +500,7 @@
 											
 											<h6 class="mt-3 mb-2">Desk Rejection Process:</h6>
 											<ol>
-												<li><strong>Initial Screening:</strong> Within 7 days of submission</li>
+												<li><strong>Initial Screening:</strong> Within 7 business days of submission</li>
 												<li><strong>Editor Assessment:</strong> By qualified Handling Editor</li>
 												<li><strong>Decision Justification:</strong> Clear, specific reasons provided</li>
 												<li><strong>Author Notification:</strong> Prompt communication with feedback</li>
@@ -772,7 +772,7 @@
 													<i class="bi bi-clock-history text-primary fs-4"></i>
 												</div>
 												<h5 class="mb-2">Desk Decision</h5>
-												<p class="mb-0"><strong>1-7 days</strong><br>Initial screening and desk rejection decisions</p>
+												<p class="mb-0"><strong>1-7 business days</strong><br>Initial screening and desk rejection decisions</p>
 											</div>
 										</div>
 										<div class="col-md-4">
@@ -781,7 +781,7 @@
 													<i class="bi bi-search text-primary fs-4"></i>
 												</div>
 												<h5 class="mb-2">Review Phase</h5>
-												<p class="mb-0"><strong>4-8 weeks</strong><br>Peer review process with expert evaluation</p>
+												<p class="mb-0"><strong>3-4 weeks (median 4 weeks)</strong><br>Peer review process with expert evaluation</p>
 											</div>
 										</div>
 										<div class="col-md-4">
