--- a/plagiarism.html
+++ b/plagiarism.html
@@ -626,7 +626,7 @@
 												<ol class="mb-0">
 													<li><strong>Initial Identification:</strong> Similarity software detection or reviewer/editor identification</li>
 													<li><strong>Preliminary Assessment:</strong> Editorial evaluation of match context and severity</li>
-													<li><strong>Author Notification:</strong> Authors informed and given opportunity to respond (14 days)</li>
+													<li><strong>Author Notification:</strong> Authors informed and given opportunity to respond (14 business days)</li>
 													<li><strong>Evidence Review:</strong> Examination of all available evidence and author response</li>
 													<li><strong>Expert Consultation:</strong> When needed, independent expert assessment</li>
 													<li><strong>Decision Making:</strong> Final decision by Editor-in-Chief following COPE guidelines</li>
