--- a/privacy.html
+++ b/privacy.html
@@ -178,7 +178,7 @@
 									<p class="mb-4">Personal data related to published articles is retained indefinitely as part of the scholarly record. Data related to unpublished submissions is retained for 3 years for record-keeping and potential resubmission.</p>
 									
 									<h3 class="h5 mb-3">7. Your Rights</h3>
-									<p class="mb-4">You have the right to access, correct, or request deletion of your personal data. Contact <a href="mailto:privacy@solav.me">privacy@solav.me</a> for data-related inquiries. We will respond within 30 days.</p>
+									<p class="mb-4">You have the right to access, correct, or request deletion of your personal data. Contact <a href="mailto:privacy@solav.me">privacy@solav.me</a> for data-related inquiries. We will respond within 30 business days.</p>
 									
 									<h3 class="h5 mb-3">8. Policy Updates</h3>
 									<p class="mb-4">This privacy policy may be updated periodically. Significant changes will be announced on our website. Continued use of our services constitutes acceptance of updated policies.</p>
