--- a/research-integrity.html
+++ b/research-integrity.html
@@ -491,7 +491,7 @@
 												<li><strong>During Review:</strong> Editors or reviewers may request specific data to verify analysis</li>
 												<li><strong>Post-Publication:</strong> Readers or other researchers may request data through editorial office</li>
 												<li><strong>Investigation:</strong> During misconduct investigations, full data access may be required</li>
-												<li><strong>Timeframe:</strong> Authors must provide requested data within 30 days of request</li>
+												<li><strong>Timeframe:</strong> Authors must provide requested data within 30 business days of request</li>
 											</ul>
 											
 											<h6 class="mt-3 mb-2">Data Management Best Practices:</h6>
@@ -688,7 +688,7 @@
 											
 											<h6 class="mt-3 mb-2">Investigation Process:</h6>
 											<ol>
-												<li><strong>Initial Assessment:</strong> Evaluate seriousness, evidence, and jurisdiction (7 days)</li>
+												<li><strong>Initial Assessment:</strong> Evaluate seriousness, evidence, and jurisdiction (7 business days)</li>
 												<li><strong>Confidentiality:</strong> Maintain confidentiality to protect all parties</li>
 												<li><strong>Author Notification:</strong> Inform authors of allegations and provide evidence (14-day response)</li>
 												<li><strong>Evidence Collection:</strong> Gather relevant documentation, data, and correspondence</li>
@@ -754,7 +754,7 @@
 											<p>Authors may appeal misconduct determinations:</p>
 											<ol>
 												<li><strong>Grounds:</strong> New evidence, procedural error, or bias</li>
-												<li><strong>Timeframe:</strong> Within 30 days of decision notification</li>
+												<li><strong>Timeframe:</strong> Within 30 business days of decision notification</li>
 												<li><strong>Process:</strong> Reviewed by independent panel not involved in original investigation</li>
 												<li><strong>Outcome:</strong> Final and binding decision</li>
 											</ol>
