--- a/review.html
+++ b/review.html
@@ -254,7 +254,7 @@
 													<span class="h4 mb-0 text-primary fw-bold">1</span>
 												</div>
 												<h4 class="h5">Initial Screening</h4>
-												<p class="mb-0 small">Editorial check for scope, format, and ethical compliance within <strong>3-5 days</strong>.</p>
+												<p class="mb-0 small">Editorial check for scope, format, and ethical compliance within <strong>3-5 business days</strong>.</p>
 											</div>
 										</div>
 										<div class="col-md-6 col-lg-4">
@@ -446,7 +446,7 @@
 													<td><span class="badge bg-success">Accept</span></td>
 													<td>Manuscript accepted as is (rare)</td>
 													<td>Minor formatting adjustments only</td>
-													<td>Publication in 2-3 weeks</td>
+													<td>Publication in 5-7 business days</td>
 												</tr>
 												<tr>
 													<td><span class="badge bg-primary">Minor Revision</span></td>
