--- a/ethics.html
+++ b/ethics.html
@@ -245,7 +245,7 @@
 										The journal follows the principles and guidelines of the <a href="https://publicationethics.org/" target="_blank" class="link-primary fw-bold">Committee on Publication Ethics (COPE)</a> to ensure best practices in scholarly publishing.
 									</p>
 									<p class="mb-0">
-										All parties involved in the publication process — authors, editors, reviewers, and publishers — are expected to adhere to these ethical standards.
+										All parties involved in the publication process -authors, editors, reviewers, and publishers- are expected to adhere to these ethical standards.
 									</p>
 								</div>
 								
