--- a/guidelines.html
+++ b/guidelines.html
@@ -657,7 +657,7 @@ Virtanen, P., et al. (2020). SciPy 1.0: Fundamental algorithms for scientific co
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
 					</div>
 				</div>
 			</div>
