--- a/conflict-of-interest.html
+++ b/conflict-of-interest.html
@@ -718,7 +718,7 @@ None: The authors declare no conflict of interest.</pre>
 						</div>
 					</div>
 					<div class="modal-footer border-0 justify-content-center pb-4">
-						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Scholarly Repository</span>
+						<span class="badge bg-primary-subtle text-primary rounded-pill px-3">Open Access Journal for Interdisciplinary Applied Research</span>
 					</div>
 				</div>
 			</div>
