--- a/aims-scope.html
+++ b/aims-scope.html
@@ -168,12 +168,7 @@
 					<div class="row align-items-center">
 						<div class="col-xl-12 col-md-12 text-center text-md-start p-5 py-2 pt-4">
 							<h2>Our Mission</h2>
-							<p class="lead fs-5">
-								The SOLAV Journal (A Scholarly Platform for Interdisciplinary Innovation and Applied Futures Research) aims to be the premier open-access platform for high-impact research that transcends traditional disciplinary boundaries. We are dedicated to publishing work that not only advances fundamental understanding but explicitly directs that knowledge toward tangible applications, innovative solutions, and forward-looking research for societal and technological benefit.
-							</p>
-							<p class="mb-2">
-								Our continuous publication model ensures that these pioneering ideas are disseminated to the global research community and industry practitioners with minimal delay, fostering immediate collaboration and accelerating the path from discovery to real-world implementation.
-							</p>
+							<p>SOLAV Journal is a peer-reviewed open access publication dedicated to advancing interdisciplinary research that bridges theoretical innovation with tangible real-world applications. We prioritize scholarship demonstrating clear societal relevance, methodological rigor, and meaningful connections across disciplinary boundaries.</p>
 						</div>
 					</div>
 				</div>
@@ -261,146 +256,68 @@
 				<div class="container pb-4 pt-5">
 					<div class="card card-body border-0 shadow-sm bg-secondary bg-opacity-25">
 						<h2 class="mb-4">Topical Scope & Research Areas</h2>
-						<p class="lead mb-4">SOLAV welcomes original research, reviews, and case studies across a broad spectrum of applied sciences, engineering, and their intersections with social sciences and humanities. We are particularly interested in interdisciplinary work connecting the following areas:</p>
+						<p>SOLAV publishes interdisciplinary applied research that bridges computational methods, engineering systems, and digital infrastructure. We prioritize work that can be conducted with accessible resources (standard computing equipment, open datasets, literature-based analysis) and demonstrates clear real-world applicability.</p>
 
 						<div class="row">
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-primary mb-3"><i class="bi bi-cpu me-2"></i>Artificial Intelligence & Computing</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Artificial & Augmented Intelligence</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Machine Learning Applications</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Deep Learning & Neural Networks</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Natural Language Processing</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Reinforcement Learning</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Explainable AI (XAI)</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Robotics & Autonomous Systems</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Computer Vision & Sensing</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Edge Computing & IoT</span></li>
-									<li class="mb-2"><span class="badge bg-primary topic-badge">Human-Computer Interaction</span></li>
+							<div class="col-md-6 mb-3">
+								<h5 class="text-info mb-3"><i class="bi bi-robot me-2"></i>Applied Artificial Intelligence</h5>
+								<p>Practical implementations of machine learning and AI systems with demonstrated real-world utility and ethical consideration.</p>
+								<ul>
+									<li>Explainable AI (XAI) for high-stakes domains</li>
+									<li>AI safety, reliability, and failure mode analysis</li>
+									<li>Small language models and efficient inference</li>
+									<li>Algorithmic fairness and bias mitigation</li>
 								</ul>
 							</div>
 
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-info mb-3"><i class="bi bi-database me-2"></i>Data Science & Systems</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-info topic-badge">Data Science & Analytics</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Big Data Infrastructure</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Cloud & Distributed Computing</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Cybersecurity & Privacy</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Blockchain & Web3</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Software Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">High Performance Computing</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Quantum Computing</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Bioinformatics & Computational Biology</span></li>
-									<li class="mb-2"><span class="badge bg-info topic-badge">Network Science</span></li>
+							<div class="col-md-6 mb-3">
+								<h5 class="text-success mb-3"><i class="bi bi-tree me-2"></i>Sustainable Energy Systems</h5>
+								<p>Engineering analysis and optimization of renewable energy technologies and resource-efficient systems.</p>
+								<ul>
+									<li>Hybrid renewable energy systems modeling</li>
+									<li>Energy storage lifecycle analysis</li>
+									<li>Circular economy technologies and resource flows</li>
+									<li>Sustainable materials informatics</li>
 								</ul>
 							</div>
 
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-success mb-3"><i class="bi bi-tree me-2"></i>Sustainability & Energy</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-success topic-badge">Renewable Energy Systems</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Energy Storage & Grid Tech</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Sustainable Materials</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Green Chemistry</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Environmental Monitoring</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Climate Adaptation Technology</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Circular Economy</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Waste Valorization</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Water & Sanitation Tech</span></li>
-									<li class="mb-2"><span class="badge bg-success topic-badge">Agri-tech & Food Security</span></li>
+							<div class="col-md-6 mb-3">
+								<h5 class="text-purple mb-3"><i class="bi bi-database me-2"></i>Digital Scholarly Infrastructure</h5>
+								<p>Computational approaches to understanding technology's societal impact using open data and literature-based methods.</p>
+								<ul>
+									<li>AI ethics and algorithmic governance frameworks</li>
+									<li>Digital policy analysis and regulatory assessment</li>
+									<li>Computational social science using open datasets</li>
+									<li>Science and technology studies (literature-based)</li>
+									<li>Scholarly communication models and open science practices</li>
 								</ul>
 							</div>
 
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-warning mb-3"><i class="bi bi-gear me-2"></i>Engineering & Biomedical</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Biomedical Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Medical Devices</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Precision Medicine</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Diagnostics & Imaging</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Nanotechnology</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Advanced Materials</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Additive Manufacturing</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Smart Infrastructure</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Urban Technology</span></li>
-									<li class="mb-2"><span class="badge bg-warning topic-badge">Quantum Sensing</span></li>
-								</ul>
-							</div>
-						</div>
-
-						<div class="row mt-4">
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-danger mb-3"><i class="bi bi-flask me-2"></i>Applied Sciences</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Chemical Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Materials Science</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Mechanical Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Electrical Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Civil Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Industrial Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Transportation Systems</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Construction Technology</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Marine & Ocean Engineering</span></li>
-									<li class="mb-2"><span class="badge bg-danger topic-badge">Aerospace Engineering</span></li>
+							<div class="col-md-6 mb-3">
+								<h5 class="text-teal mb-3"><i class="bi bi-cpu me-2"></i>Computational Methods & Tools</h5>
+								<p>Novel algorithms, software tools, and analytical frameworks with interdisciplinary applicability.</p>
+								<ul>
+									<li>Reproducible computational workflows</li>
+									<li>Open-source research software development</li>
+									<li>Data visualization for complex systems</li>
+									<li>Simulation and modeling techniques</li>
 								</ul>
 							</div>
 
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-teal mb-3"><i class="bi bi-people me-2"></i>Social Sciences & Humanities</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Computational Social Science</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Digital Humanities</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Science & Technology Studies</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Sociotechnical Systems</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Ethics of Technology</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">AI & Society</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Human-Centered Design</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Technology Policy & Governance</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Innovation Economics</span></li>
-									<li class="mb-2"><span class="badge bg-teal topic-badge">Behavioral Science & Tech</span></li>
-								</ul>
-							</div>
-
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-dark mb-3"><i class="bi bi-lightning me-2"></i>Emerging & Cross-disciplinary</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Digital Twins</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Metaverse & Extended Reality</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Science of Science</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Technology Transfer</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Innovation Management</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">STEM Education Research</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">One Health Technology</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Disaster Resilience Tech</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Global Health Technology</span></li>
-									<li class="mb-2"><span class="badge bg-dark topic-badge">Space Technology & Applications</span></li>
-								</ul>
-							</div>
-
-							<div class="col-md-6 col-lg-3 mb-3">
-								<h6 class="text-purple mb-3"><i class="bi bi-journal-text me-2"></i>Out of Scope</h6>
-								<ul class="list-unstyled">
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Purely theoretical work without applied component</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Routine technical reports</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Unvalidated computational models</span></li>
-									<li class="mb-2"><span class="badge bg-purple topic-badge">Non-reproducible studies</span></li>
-								</ul>
-							</div>
 						</div>
 
 						<div class="alert alert-info mt-4">
-							<div class="d-flex">
-								<i class="bi bi-arrow-left-right fs-5 me-3"></i>
-								<div>
-									<strong>Interdisciplinary & Transdisciplinary Focus:</strong> SOLAV prioritizes research that connects multiple domains and bridges the gap between technical innovation and societal impact. We particularly welcome submissions that demonstrate:
-									<ul class="mt-2 mb-0">
-										<li><strong>Technology-Society Interfaces:</strong> AI ethics, digital policy, sociotechnical systems</li>
-										<li><strong>Human-Centered Innovation:</strong> HCI, participatory design, technology acceptance</li>
-										<li><strong>Applied Social Sciences:</strong> Computational social science, behavioral economics of tech</li>
-										<li><strong>Humanities-Informed Tech:</strong> Digital humanities, ethics by design, historical perspectives</li>
-									</ul>
-								</div>
+							<div class="text-info">
+								<h3>Scope Boundaries</h3>
+								<p>To ensure review feasibility and author clarity, we explicitly <strong>do not publish</strong>:</p>
+								<ul>
+									<li>Clinical trials, medical interventions, or human subjects research requiring IRB approval</li>
+									<li>Wet lab experiments requiring specialized equipment</li>
+									<li>Pure theoretical mathematics or computer science without applied demonstration</li>
+									<li>Large-scale surveys or ethnographic studies requiring primary data collection</li>
+									<li>Pure humanities scholarship (literary analysis, philosophy without technological focus)</li>
+								</ul>
+								<p><strong>When in doubt</strong>: If your research can be conducted with a standard laptop, open datasets, and literature resources, it likely fits our scope. Contact <a href="mailto:editorial@solav.me">editorial@solav.me</a> before submission for scope confirmation.</p>
 							</div>
 						</div>
 						
