--- a/appeals-complaints.html
+++ b/appeals-complaints.html
@@ -789,14 +789,21 @@
 					<div class="col-md-6 text-md-end order-md-2 px-2">
 						<div class="row mb-0 h-100 d-flex align-items-end justify-content-lg-end px-3">
 							<div class="col-12 p-0 m-0">
-								<a href="https://zenodo.org/communities/solav" alt="Zenodo" target="_blank">
-									<img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo"></a>
-								<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite." target="_blank">
-									<img src="/images/datacite-logo.svg" class="d-Icons" alt="SOLAV articles are preserved in Zenodo and assigned persistent DOIs via DataCite."></a>
-								<a href="https://bsky.app/profile/solav.me" alt="Bluesky" target="_blank">
-									<img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky"></a>
-								<a rel="me" href="https://mastodon.social/@SOLAVjournal" alt="Mastodon" target="_blank">
-									<img src="/images/mastodon-icon.svg" class="d-IconsL m-0" alt="Mastodon"></a>
+								<a href="https://zenodo.org/communities/solav" 
+								title="Permanent archival of all articles in Zenodo (CERN), a CoreTrustSeal-certified repository" 
+								target="_blank"><img src="/images/zenodo-icon-blue.svg" class="d-Icons" alt="Zenodo repository archive"></a>
+								<a href="https://commons.datacite.org/doi.org?query=SOLAV+Journal" 
+								title="Persistent Digital Object Identifiers (DOIs) and metadata registered via DataCite" 
+								target="_blank"><img src="/images/datacite-logo.svg" class="d-Icons" alt="DataCite DOI registration"></a>
+								<a href="https://openalex.org/works?page=1&filter=title_and_abstract.search:solav+journal" 
+								title="Scholarly metadata harvested and discoverable in OpenAlex database" 
+								target="_blank"><img src="/images/openalex_logo.svg" class="d-Icons" alt="OpenAlex scholarly database"></a>
+								<a href="https://bsky.app/profile/solav.me" 
+								title="Official journal communications channel on Bluesky social network" 
+								target="_blank"><img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky communications channel"></a>
+								<a rel="me" href="https://mastodon.social/@SOLAVjournal" 
+								title="Official journal presence on Mastodon federated social network" 
+								target="_blank"><img src="/images/mastodon-icon.svg" class="d-IconsL m-0" alt="Mastodon scholarly presence"></a>
 							</div>
 							<ul class="list-inline col-12 p-0 m-0">
 								<li class="list-inline-item p-0 m-0"><a href="/privacy" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Privacy Policy</a><span class="text-primary p-0 m-0 px-2">●</span></li>
